fix(menu): Fix carousel loop bug

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <div class="special-drinks__slide slide">
                         <!---------- Slide image ------------>
                         <img class="special-drinks__slide-img" src="./assets/imgs/twilight-elixir-3.jpg"
-                            alt="Slide one image: Delicious Affogato desert.">
+                            alt="Slide two image: Delicious Affogato desert.">
                         <!----------------------------------->
                     </div>
                     <!----------------------------------->
@@ -495,7 +495,7 @@
                     <div class="special-drinks__slide slide">
                         <!---------- Slide image ------------>
                         <img class="special-drinks__slide-img" src="./assets/imgs/sweet-love.jpg"
-                            alt="Slide one image: Delicious Mocha with foam.">
+                            alt="Slide three image: Delicious Mocha with foam.">
                         <!----------------------------------->
                     </div>
                     <!----------------------------------->
@@ -504,7 +504,7 @@
                     <div class="special-drinks__slide slide">
                         <!---------- Slide image ------------>
                         <img class="special-drinks__slide-img" src="./assets/imgs/sweet-love.jpg"
-                            alt="Slide one image: Delicious Mocha with foam.">
+                            alt="Slide four image: Delicious Mocha with foam.">
                         <!----------------------------------->
                     </div>
                     <!----------------------------------->
