Refactor: Refactored JS code into modules

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <ul class="main-nav__list">
                     <li class="current main-nav__list-item">
                         <button>
-                            <a class="current main-nav__link" href="#home" aria-current="page"
+                            <a class="current main-nav__link" href="#hero" aria-current="page"
                                 aria-label="link to scroll to the home section">
                                 <i class="main-nav__icon fa fa-home" aria-hidden="true"></i>Home
                             </a>
@@ -494,7 +494,7 @@
                     <!------------- Slide --------------->
                     <div class="special-drinks__slide slide">
                         <!---------- Slide image ------------>
-                        <img class="special-drinks__slide-img" src="./assets/imgs/sweet-love.jpg"
+                        <img class="special-drinks__slide-img" src="./assets/imgs/sweet-love-4.jpg"
                             alt="Slide three image: Delicious Mocha with foam.">
                         <!----------------------------------->
                     </div>
@@ -503,7 +503,7 @@
                     <!------------- Slide --------------->
                     <div class="special-drinks__slide slide">
                         <!---------- Slide image ------------>
-                        <img class="special-drinks__slide-img" src="./assets/imgs/sweet-love.jpg"
+                        <img class="special-drinks__slide-img" src="./assets/imgs/cherry-y2.jpg"
                             alt="Slide four image: Delicious Mocha with foam.">
                         <!----------------------------------->
                     </div>
