refactor: Move utils.js to modules folder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!----------------------------------->
 
     <!----------- JavaScript ------------>
-    <script type="module" src="./JS/utils.js"></script>
+    <script type="module" src="./JS/modules/utils.js"></script>
     <script type="module" src="./JS/app.js"></script>
     <!----------------------------------->
 </head>
