feat(menu): Add description to menu cards on hover

--- a/index.html
+++ b/index.html
@@ -270,68 +270,109 @@
                     <ul class="menu__card-list">
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cappuccino</h4>
+                            <p class="menu__card-description">
+                                Savor our cappuccino: espresso, steamed milk, foam; a classic Italian bliss.
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/cappuccino.png" alt="cappuccino"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Doppio</h4>
+                            <p class="menu__card-description">
+                                Try Doppio: double the espresso, double the intensity. Pure coffee
+                                perfection.
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/doppio3.jpg" alt="doppio" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Latte</h4>
+                            <p class="menu__card-description">
+                                The Latte: where espresso meets steamed milk with a dash of foam. So creamy!
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/latte2.png" alt="latte" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Mocha</h4>
+                            <p class="menu__card-description">
+                                Our Mocha: a fusion of espresso, creamy milk, and chocolate... yes, chocolate!
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/mocha2.jpg" alt="mocha" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Americano</h4>
+                            <p class="menu__card-description">
+                                Yumm, Americano... It's like espresso's laid-back sibling, energizes you sip
+                                by sip!
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/americano2.png" alt="americano"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cortado</h4>
+                            <p class="menu__card-description">
+                                Espresso needs a smooth partner, and here it is! Mixed with steamed milk for a delight!
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/cortado2.jpg" alt="cortado"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Lungo</h4>
+                            <p class="menu__card-description">
+                                Seeking excitement? Try Lungo: espresso's daring cousin, brewed longer for a bold ride!
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/lungo2.png" alt="cappuccino"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Affogato</h4>
+                            <p class="menu__card-description">
+                                Savor our cappuccino: espresso, steamed milk, foam; a classic Italian bliss.
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/affogato3.jpg" alt="affogato"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Frappé</h4>
+                            <p class="menu__card-description">
+                                Savor our cappuccino: espresso, steamed milk, foam; a classic Italian bliss.
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/frappe2.jpg" alt=" frappé" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Machiatto</h4>
+                            <p class="menu__card-description">
+                                Savor our cappuccino: espresso, steamed milk, foam; a classic Italian bliss.
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/coffee-machiatto2.png" alt="machiatto"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Ristretto</h4>
+                            <p class="menu__card-description">
+                                Savor our cappuccino: espresso, steamed milk, foam; a classic Italian bliss.
+                            </p>
                             <img class="menu__card-img" src="./assets/imgs/ristretto2.jpg" alt="Ristretto"
                                 draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Flat white</h4>
+                            <div class="menu__card-info">
+                                
+                                <p class="menu__card-description">
+                                    Savor our cappuccino: espresso, steamed milk, foam; a classic Italian bliss.
+                                </p>
+                            </div>
                             <img class="menu__card-img" src="./assets/imgs/flat-white2.jpg" alt="flat white"
                                 draggable="false">
                         </li>
